fixed site description not showing with dark-header on mobile

--- a/sass/_dark_header.scss
+++ b/sass/_dark_header.scss
@@ -77,7 +77,7 @@
     .toggle-navigation {
       color: white;
     }
-    .site-header .site-description {
+    .site-description {
       color: white;
     }
   }
